Fix overflow

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -40,7 +40,7 @@ main {
 
   main {
     flex-direction: column;
-    align-items: center;
+    justify-content: center;
     gap: 25px;
     margin-top: 35px;
     margin-bottom: 35px;
