--- a/src/scss/partials/_addNewScore.scss
+++ b/src/scss/partials/_addNewScore.scss
@@ -46,6 +46,8 @@
   #addNewScore {
     align-items: center;
     width: 100%;
+    margin-left: 5px;
+    margin-right: 5px;
 
     h2 {
       font-size: 25px;
