--- a/src/scss/partials/_recentScores.scss
+++ b/src/scss/partials/_recentScores.scss
@@ -52,7 +52,12 @@
 
 @media screen and (max-width: 768px) {
   #recentScores {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
     width: auto;
+    margin-left: 5px;
+    margin-right: 5px;
 
     div {
       h2 {
@@ -66,11 +71,9 @@
     }
 
     ul {
-      width: auto;
 
       li {
         font-size: 22px;
-        width: 85vw;
       }
     }
   }
